Ajout et modification de contenu

--- a/index.html
+++ b/index.html
@@ -7,15 +7,47 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body id="content">
+
+    <!-- Header avec menu -->
+    <header>
+      <nav id="menu">
+        <ul>
+          <li>
+            <a href="#">
+              <img src="" alt="logo Arteastic">
+            </a>
+          </li>
+          <li>
+            <a href="#">Accueil</a>
+          </li>
+          <li>
+            <a href="#">Notre histoire</a>
+          </li>
+          <li>
+            <a href="#">Nos produits</a>
+          </li>
+          <li>
+            <a href="#">Menu</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- présentation -->
     <section id="presentation">
+      <p>Bienvenue chez</p>
+      <h1>Arteastic</h1>
+      <p>
+        Concept store / Salon de thé / Petite restauration / Galerie d'arts<br>
+        15 rue de la petite fusterie - 84000 Avignon<br>
+        Ouverts du Mardi au Samedi - 10h / 18h.
+      </p>
     </section>
-    <p>Bienvenue chez</p>
-    <h1>Arteastic</h1>
-    <p>
-      Concept store / Salon de thé / Petite restauration / Galerie d'arts<br>
-      15 rue de la petite fusterie - 84000 Avignon<br>
-      Ouverts du Lundi au Samedi.
-    </p>
+
+    <!-- notre histoire -->
     <section id="histoire">
       <h2>Notre histoire</h2>
       <p>
@@ -26,6 +58,8 @@
         magnis undique praesidiis conmunitam.
       </p>
     </section>
+
+    <!-- nos produits -->
     <section id="produits">
       <img class="produit_image" alt="intérieur" src="images/plat.jpg">
       <div class="produit_text">
@@ -40,22 +74,29 @@
       </div>
     </section>
 
-    <!--https://css-tricks.com/css-only-carousel/-->
-    <section id="repas">
-      <div class="repas_text">
-        <h2>Menu</h2>
-        <p>
-          Metuentes igitur idem latrones Lycaoniam magna parte campestrem cum se
-          inpares nostris fore congressione stataria documentis frequentibus
-          scirent, tramitibus deviis petivere Pamphyliam diu quidem intactam
-          sed timore populationum et caedium, milite per omnia diffuso propinqua,
-          magnis undique praesidiis conmunitam.
-        </p>
-      </div>
-      <img class="repas_image" alt="repas" src="images/plat.jpg">
-    <section id="contact">
+    <!-- Covid -->
+    <section id="covid">
 
     </section>
-    <footer></footer>
+
+    <!-- menu -->
+    <section id="menu">
+
+    </section>
+
+    <!-- contact -->
+    <section id="contact">
+      <h2>Nous contacter</h2>
+    </section>
+
+    <!-- réseau sociaux -->
+    <section id="social">
+
+    </section>
+
+    <!-- footer -->
+    <footer>
+      <p>Tout droit résevés</p>
+    </footer>
   </body>
 </html>
