Dernier commit de la journée

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
           <li>
             <a href="#">
-              <img src="" alt="logo Arteastic">
+              <img src="images/logo.png" alt="logo Arteastic">
             </a>
           </li>
           <li>
@@ -75,8 +75,15 @@
     </section>
 
     <!-- Covid -->
-    <section id="covid">
-
+    <section id="collect">
+      <h2>Informations sanitaire</h2>
+      <p>Dans le respect des nouvelles mesures, notre magasin est ouvert et continue à vous servir.</p>
+      <p>Pour votre sécurité et simplifier votre visite nous vous recommandons ces étapes à suivre :</p>
+      <div class="collect_etapes">
+        <img src="" alt="masque">
+        <img src="" alt="distance_securite">
+        <img src="" alt="commande">
+      </div>
     </section>
 
     <!-- menu -->
@@ -87,11 +94,17 @@
     <!-- contact -->
     <section id="contact">
       <h2>Nous contacter</h2>
+      <p>06 20 27 49 59</p>
+
     </section>
 
     <!-- réseau sociaux -->
     <section id="social">
-
+      <h2>Rejoignez-nous</h2>
+      <div class="social_logos">
+        <img src="" alt="">
+        <img src="" alt="">
+      </div>
     </section>
 
     <!-- footer -->
