Fix and update header and presentation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body id="content">
+  <body id="contenu">
 
     <!-- Header avec menu -->
     <header>
@@ -38,24 +38,27 @@
 
     <!-- présentation -->
     <section id="presentation">
-      <p>Bienvenue chez</p>
-      <h1>Arteastic</h1>
-      <p>
-        Concept store / Salon de thé / Petite restauration / Galerie d'arts<br>
-        15 rue de la petite fusterie - 84000 Avignon<br>
-        Ouverts du Mardi au Samedi - 10h / 18h.
-      </p>
+      <div class="pres_texte">
+        <p>Bienvenue chez</p>
+        <h1>Arteastic</h1>
+        <p>
+          <strong>Concept store</strong><br>
+          Salon de thé / Petite restauration / Galerie d'arts<br>
+        </p>
+        <p>
+          15 rue de la petite fusterie - 84000 Avignon<br>
+          Ouverts du Mardi au Samedi - 10h / 18h.
+        </p>
+      </div>
     </section>
 
     <!-- notre histoire -->
     <section id="histoire">
       <h2>Notre histoire</h2>
       <p>
-        Metuentes igitur idem latrones Lycaoniam magna parte campestrem cum se
-        inpares nostris fore congressione stataria documentis frequentibus
-        scirent, tramitibus deviis petivere Pamphyliam diu quidem intactam
-        sed timore populationum et caedium, milite per omnia diffuso propinqua,
-        magnis undique praesidiis conmunitam.
+        Diététicienne et naturopathe de profession, j'ai toujours souhaitée ouvrir un concept store regroupant mes différents centres d'intêrets. C'est comme cela qu'est né le projet Arteastic.<br>
+        Tout les jours je vous proposerais un plat du jour différents accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br>
+        Présent dans le centre d'Avignon, venez vous ressourcer chez nous tout en admirant notre artiste du moment.
       </p>
     </section>
 
