--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h2>Notre histoire</h2>
       <p>
         Diététicienne et naturopathe de profession, j'ai toujours souhaitée ouvrir un concept store regroupant mes différents centres d'intêrets. C'est comme cela qu'est né le projet Arteastic.<br>
-        Tout les jours je vous proposerais un plat du jour différents accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br>
+        Tout les jours je vous proposerais un plat du jour différents, accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br>
         Présent dans le centre d'Avignon, venez vous ressourcer chez nous tout en admirant notre artiste du moment.
       </p>
     </section>
