Test change author git

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         Tout les jours je vous proposerais un plat du jour différents, accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br>
         Présent dans le centre d'Avignon, venez vous ressourcer chez nous tout en admirant notre artiste du moment.
       </p>
+      <p>TEST !</p>
     </section>
 
     <!-- nos produits -->
