Ajout contenu partie produits plus centrer le texte sur tout la page.

--- a/index.html
+++ b/index.html
@@ -6,31 +6,31 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
-  <body id="contenu">
+  <body id="content">
 
     <!-- Header avec menu -->
     <header>
       <nav id="menu">
         <ul>
           <li>
-            <a href="#">
+            <a href="#presentation">
               <img src="images/logo.png" alt="logo Arteastic">
             </a>
           </li>
           <li>
-            <a href="#">Accueil</a>
+            <a href="#presentation">Accueil</a>
           </li>
           <li>
-            <a href="#">Notre histoire</a>
+            <a href="#histoire">Notre histoire</a>
           </li>
           <li>
-            <a href="#">Nos produits</a>
+            <a href="#produits">Nos produits</a>
           </li>
           <li>
-            <a href="#">Menu</a>
+            <a href="#menu">Menu</a>
           </li>
           <li>
-            <a href="#">Contact</a>
+            <a href="#contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -60,7 +60,6 @@
         Tout les jours je vous proposerais un plat du jour différents, accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br>
         Présent dans le centre d'Avignon, venez vous ressourcer chez nous tout en admirant notre artiste du moment.
       </p>
-      <p>TEST !</p>
     </section>
 
     <!-- nos produits -->
@@ -69,12 +68,10 @@
       <div class="produit_text">
         <h2>Nos produits</h2>
         <p>
-          Metuentes igitur idem latrones Lycaoniam magna parte campestrem cum se
-          inpares nostris fore congressione stataria documentis frequentibus
-          scirent, tramitibus deviis petivere Pamphyliam diu quidem intactam
-          sed timore populationum et caedium, milite per omnia diffuso propinqua,
-          magnis undique praesidiis conmunitam.
+          Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br>
+          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de la MARQUE DONT J'AI OUBLIÉ LE NON.<br>
         </p>
+        <img src="" alt="Logo marque dont j'ai oublié le non">
       </div>
     </section>
 
@@ -92,23 +89,20 @@
 
     <!-- menu -->
     <section id="menu">
-
+      <h2>Notre menu</h2>
+      <p>Carroussel menu</p>
     </section>
 
     <!-- contact -->
     <section id="contact">
       <h2>Nous contacter</h2>
       <p>06 20 27 49 59</p>
-
-    </section>
-
-    <!-- réseau sociaux -->
-    <section id="social">
-      <h2>Rejoignez-nous</h2>
+      <h3>Rejoignez-nous</h3>
       <div class="social_logos">
-        <img src="" alt="">
-        <img src="" alt="">
+        <img src="" alt="Compte facebook Arteastic">
+        <img src="" alt="Compte instagram Arteastic">
       </div>
+
     </section>
 
     <!-- footer -->
