--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <h2>Nos produits</h2>
         <p>
           Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br>
-          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de la MARQUE DONT J'AI OUBLIÉ LE NON.<br>
+          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de Comtesse du barry.<br>
         </p>
-        <img src="" alt="Logo marque dont j'ai oublié le non">
+        <img src="" alt="logo Comtesse du barry">
       </div>
     </section>
 
@@ -96,7 +96,13 @@
     <!-- contact -->
     <section id="contact">
       <h2>Nous contacter</h2>
-      <p>06 20 27 49 59</p>
+
+      <p>Pour toute réservation ou commande veuillez nous contacter au : 06 27 89 65 77</p>
+
+      <p>Venez nous passer un coucou à l'adresse suivante : 15 rue de la petite fusterie - 84000 Avignon</p>
+      <iframe id="carte" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1436.2350968574476!2d4.80314859276047!3d43.949637279009636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5eb2c282042a9%3A0x2442e3ccea0480e3!2sArteastic!5e0!3m2!1sfr!2sfr!4v1608387564301!5m2!1sfr!2sfr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+
       <h3>Rejoignez-nous</h3>
       <div class="social_logos">
         <img src="" alt="Compte facebook Arteastic">
