--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Arteastic</title>
+
+    <!-- Css carrousel -->
+    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <!-- Style par défaut carrousel slick -->
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
@@ -64,16 +70,29 @@
 
     <!-- nos produits -->
     <section id="produits">
-      <img class="produit_image" alt="intérieur" src="images/plat.jpg">
-      <div class="produit_text">
-        <h2>Nos produits</h2>
-        <p>
-          Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br>
-          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de Comtesse du barry.<br>
-        </p>
-        <img src="" alt="logo Comtesse du barry">
+
+      <!-- carrousel produits -->
+      <div class="carrousel">
+        <div>
+            <img class="produit_image" alt="carbo" src="images/carbo.jpg">
+        </div>
+        <div>
+            <img class="produit_image" alt="cookies" src="images/cookies.jpg">
+        </div>
+        <div>
+            <img class="produit_image" alt="plat" src="images/plat.jpg">
+        </div>
       </div>
     </section>
+
+    <div class="produit_text">
+      <h2>Nos produits</h2>
+      <p>
+        Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br>
+        De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de Comtesse du barry.<br>
+      </p>
+      <img src="" alt="logo Comtesse du barry">
+    </div>
 
     <!-- Covid -->
     <section id="collect">
@@ -90,7 +109,7 @@
     <!-- menu -->
     <section id="menu">
       <h2>Notre menu</h2>
-      <p>Carroussel menu</p>
+      <p>Carrousel menu</p>
     </section>
 
     <!-- contact -->
@@ -115,5 +134,16 @@
     <footer>
       <p>Tout droit résevés</p>
     </footer>
+
+    <!-- js carrousel slick -->
+    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="./slick/slick.min.js"></script>
+
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $(".carrousel").slick();
+      });
+    </script>
+
   </body>
 </html>
