--- a/index.html
+++ b/index.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Arteastic</title>
-
-    <!-- Css carrousel -->
-    <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-    <!-- Style par défaut carrousel slick -->
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
-
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/slide.js"></script>
   </head>
   <body id="content">
 
@@ -70,18 +65,39 @@
 
     <!-- nos produits -->
     <section id="produits">
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
 
-      <!-- carrousel produits -->
-      <div class="carrousel">
-        <div>
-            <img class="produit_image" alt="carbo" src="images/carbo.jpg">
-        </div>
-        <div>
-            <img class="produit_image" alt="cookies" src="images/cookies.jpg">
-        </div>
-        <div>
-            <img class="produit_image" alt="plat" src="images/plat.jpg">
-        </div>
+       <!-- Full-width images with number and caption text -->
+       <div class="mySlides fade">
+         <div class="numbertext">1 / 3</div>
+         <img src="images/carbo.jpg" style="width:100%">
+         <div class="text">Caption Text</div>
+       </div>
+
+       <div class="mySlides fade">
+         <div class="numbertext">2 / 3</div>
+         <img src="images/cookies.jpg" style="width:100%">
+         <div class="text">Caption Two</div>
+       </div>
+
+       <div class="mySlides fade">
+         <div class="numbertext">3 / 3</div>
+         <img src="images/plat.jpg" style="width:100%">
+         <div class="text">Caption Three</div>
+       </div>
+
+       <!-- Next and previous buttons -->
+       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+       <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br>
+
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+       <span class="dot" onclick="currentSlide(1)"></span>
+       <span class="dot" onclick="currentSlide(2)"></span>
+       <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     </section>
 
@@ -134,16 +150,6 @@
     <footer>
       <p>Tout droit résevés</p>
     </footer>
-
-    <!-- js carrousel slick -->
-    <script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
-    <script type="text/javascript" src="./slick/slick.min.js"></script>
-
-    <script type="text/javascript">
-      $(document).ready(function(){
-        $(".carrousel").slick();
-      });
-    </script>
 
   </body>
 </html>
