Change image's resolution and fix bug with js caroussel

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Arteastic</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/slide.js"></script>
+    <script src="js/slide.js" defer></script>
   </head>
   <body id="content">
 
@@ -83,7 +83,7 @@
 
        <div class="mySlides fade">
          <div class="numbertext">3 / 3</div>
-         <img src="images/plat.jpg" style="width:100%">
+         <img src="images/empanadas.jpg" style="width:100%">
          <div class="text">Caption Three</div>
        </div>
 
@@ -150,6 +150,5 @@
     <footer>
       <p>Tout droit résevés</p>
     </footer>
-
   </body>
 </html>
