--- a/index.html
+++ b/index.html
@@ -65,57 +65,62 @@
 
     <!-- nos produits -->
     <section id="produits">
-      <!-- Slideshow container -->
-      <div class="slideshow-container">
+      <!-- Slideshow -->
+      <div class="slideshow">
+        <!-- Slideshow container -->
+        <div class="slideshow-container">
 
-       <!-- Full-width images with number and caption text -->
-       <div class="mySlides fade">
-         <div class="numbertext">1 / 3</div>
-         <img src="images/carbo.jpg" style="width:100%">
-         <div class="text">Caption Text</div>
-       </div>
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="images/carbo.jpg" style="width:100%">
+            <div class="text">Caption Text</div>
+          </div>
 
-       <div class="mySlides fade">
-         <div class="numbertext">2 / 3</div>
-         <img src="images/cookies.jpg" style="width:100%">
-         <div class="text">Caption Two</div>
-       </div>
+          <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="images/cookies.jpg" style="width:100%">
+            <div class="text">Caption Two</div>
+          </div>
 
-       <div class="mySlides fade">
-         <div class="numbertext">3 / 3</div>
-         <img src="images/empanadas.jpg" style="width:100%">
-         <div class="text">Caption Three</div>
-       </div>
+          <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="images/empanadas.jpg" style="width:100%">
+            <div class="text">Caption Three</div>
+          </div>
 
-       <!-- Next and previous buttons -->
-       <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-       <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+
+        <!-- The dots/circles -->
+        <div style="text-align:center">
+          <span class="dot" onclick="currentSlide(1)"></span>
+          <span class="dot" onclick="currentSlide(2)"></span>
+          <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
       </div>
-      <br>
 
-      <!-- The dots/circles -->
-      <div style="text-align:center">
-       <span class="dot" onclick="currentSlide(1)"></span>
-       <span class="dot" onclick="currentSlide(2)"></span>
-       <span class="dot" onclick="currentSlide(3)"></span>
+      <!-- produits_text -->
+      <div class="produit_text">
+        <h2>Nos produits</h2>
+        <p>
+          Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br><br>
+          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de Comtesse du barry.<br>
+        </p>
+        <img src="images/logo_comtesse.png" alt="logo Comtesse du barry">
       </div>
     </section>
 
-    <div class="produit_text">
-      <h2>Nos produits</h2>
-      <p>
-        Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br>
-        De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de Comtesse du barry.<br>
-      </p>
-      <img src="" alt="logo Comtesse du barry">
-    </div>
 
     <!-- Covid -->
-    <section id="collect">
+    <section id="sante">
       <h2>Informations sanitaire</h2>
       <p>Dans le respect des nouvelles mesures, notre magasin est ouvert et continue à vous servir.</p>
       <p>Pour votre sécurité et simplifier votre visite nous vous recommandons ces étapes à suivre :</p>
-      <div class="collect_etapes">
+      <div class="sante_etapes">
         <img src="" alt="masque">
         <img src="" alt="distance_securite">
         <img src="" alt="commande">
