Première version section santé

--- a/index.html
+++ b/index.html
@@ -115,15 +115,28 @@
     </section>
 
 
-    <!-- Covid -->
+    <!-- Sante -->
     <section id="sante">
       <h2>Informations sanitaire</h2>
-      <p>Dans le respect des nouvelles mesures, notre magasin est ouvert et continue à vous servir.</p>
+      <p>Dans le respect des nouvelles mesures sanitaire, notre magasin est ouvert et continue à vous servir.</p>
       <p>Pour votre sécurité et simplifier votre visite nous vous recommandons ces étapes à suivre :</p>
       <div class="sante_etapes">
-        <img src="" alt="masque">
-        <img src="" alt="distance_securite">
-        <img src="" alt="commande">
+        <div class="etape">
+          <img src="images/icon_mask.png" alt="Porter un masque">
+          <p>Veuillez toujours porter un masque à l'intérieur du magasin.</p>
+        </div>
+        <div class="etape">
+          <img src="images/icon_cleaning_hand.png" alt="Se laver les mains">
+          <p>Pensez à vous lavez régulièrement les mains de plus, si besoin, du gel hydroalcoolique est à disposition dans le magasin.</p>
+        </div>
+        <div class="etape">
+          <img src="images/icon_disctancing.png" alt="Respecter les distances de sécurité">
+          <p>Veuillez respecter les distances de sécurité à l'intérieur du magasin.</p>
+        </div>
+        <div class="etape">
+          <img src="images/icon_phone.png" alt="Pensez à nous appeller pour toutes commandes">
+          <p>Pour fluidifier le passage dans notre magasin, n'hesitez pas à nous contacter pour toutes commandes.</p>
+        </div>
       </div>
     </section>
 
