--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <title>Arteastic</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/slide.js" defer></script>
   </head>
   <body id="content">
 
-    <!-- Header avec menu -->
+    <!-- Header avec navigation -->
     <header>
-      <nav id="menu">
+      <nav id="navigation">
         <ul>
           <li>
             <a href="#presentation">
@@ -65,52 +64,15 @@
 
     <!-- nos produits -->
     <section id="produits">
-      <!-- Slideshow -->
-      <div class="slideshow">
-        <!-- Slideshow container -->
-        <div class="slideshow-container">
 
-          <!-- Full-width images with number and caption text -->
-          <div class="mySlides1 fade">
-            <div class="numbertext">1 / 3</div>
-            <img src="images/carbo.jpg">
-            <div class="text">Caption Text</div>
-          </div>
-
-          <div class="mySlides1 fade">
-            <div class="numbertext">2 / 3</div>
-            <img src="images/cookies.jpg">
-            <div class="text">Caption Two</div>
-          </div>
-
-          <div class="mySlides1 fade">
-            <div class="numbertext">3 / 3</div>
-            <img src="images/empanadas.jpg">
-            <div class="text">Caption Three</div>
-          </div>
-
-          <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
-        </div>
-        <br>
-
-        <!-- The dots/circles -->
-        <!--
-        <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
-        -->
-      </div>
+      <img src="images/carbo.jpg" class="produits_img" alt="Photo d'ingrédient pour des pâtes à la carbonara">
 
       <!-- produits_text -->
-      <div class="produit_text">
+      <div class="produits_text">
         <h2>Nos produits</h2>
         <p>
           Tout les jours nous nous évertuons à sélectionner nos produits pour vous proposer des plats délicieux de saisons.<br><br>
-          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat des produits de Comtesse du barry.<br>
+          De plus vous pouvez retrouver dans notre boutique une sélection de produits régionnaux dans notre espace épicerie ainsi que, grâce à notre partenariat, des produits de Comtesse du barry.<br>
         </p>
         <img src="images/logo_comtesse.png" alt="logo Comtesse du barry">
       </div>
@@ -118,6 +80,7 @@
 
 
     <!-- Sante -->
+    <!-- À refaire en pop up
     <section id="sante">
       <h2>Informations sanitaire</h2>
       <p>Dans le respect des nouvelles mesures sanitaire, notre magasin est ouvert et continue à vous servir.</p>
@@ -141,21 +104,23 @@
         </div>
       </div>
     </section>
+    -->
 
     <!-- menu -->
+    <!-- menu à modifier (suppression du caroussel)
     <section id="menu">
       <h2>Notre menu</h2>
-      <!-- Slideshow -->
+
       <div class="slideshow">
-        <!-- Slideshow container -->
+
         <div class="slideshow-container">
 
-          <!-- Full-width images with number and caption text -->
+
           <div class="mySlides2 fade">
             <div class="numbertext">1 / 3</div>
-            <img src="" alt="thé">
+            <img src="images/fleur_cafe.png" alt="Illustration fleur de café">
             <div class="the">
-              <h3>Sélection de thés</h3>
+              <h3>Sélection de thé</h3>
               <p>
                 Pu Erh special, Le secret du chaperon rouge,
                 English breakfast broken, Bonheur tibétain,
@@ -173,8 +138,9 @@
                 Infusion aux herbes pour le soir,
                 Jolie silhouette, Thé vert Matcha
               </p>
+              <p class="prix">3,50 €</p>
             </div>
-            <div class="chocolat">
+            <div class="chocolats">
               <h3>Les chocolats chauds</h3>
               <ul>
                 <li>Chai chai unicorn</li>
@@ -184,7 +150,7 @@
                 <li>Minty monkey</li>
               </ul>
             </div>
-            <div class="Les cafés">
+            <div class="cafes">
               <h3>Les cafés</h3>
               <ul>
                 <li>Expresso</li>
@@ -195,7 +161,7 @@
                 <li>Cappuccino</li>
               </ul>
             </div>
-            <div class="Les boissons">
+            <div class="boissons">
               <h3>Les boissons</h3>
               <ul>
                 <li>Ginger beer [sans alcool]</li>
@@ -213,32 +179,69 @@
 
           <div class="mySlides2 fade">
             <div class="numbertext">2 / 3</div>
-            <img src="" alt="Carte des vins et bières">
+            <img src="images/raisin.png" alt="Illustration d'un grappe de raisin">
+            <div class="text">Cartes des vins et bières</div>
+            <div class="vins">
+              <h3>Vin domaine de Comiac</h3>
+              <ul>
+                <li>Émotion vin blanc 2017</li>
+                <li>Grenache<br>vin rosé 2016</li>
+                <li>Nuance<br>vin rouge 2017</li>
+                <li>Bacchanales<br>vin rouge 2015</li>
+                <li>Kir vin blanc<br>gingembre safran</li>
+              </ul>
+            </div>
+            <div class="vins">
+              <h3>Vin domaine Le Bois Sacré</h3>
+              <ul>
+                <li>Mille pieds<br>Vin Blanc 2016</li>
+              </ul>
+            </div>
+            <div class="vins">
+              <h3>Vin domaine Mas mellet</h3>
+              <ul>
+                <li>Les salines<br>. Naturel sans pression .<br>Vin Rouge 2017</li>
+              </ul>
+            </div>
+            <div class="vins">
+              <h3>Vin domaine Brillane</h3>
+              <ul>
+                <li>Le B<br>Vin Blanc 2015</li>
+              </ul>
+            </div>
+            <div class="vins">
+              <h3>Champagne domaine Ruffin</h3>
+              <ul>
+                <li>Blanc<br>Chardonnay d’or</li>
+                <li>Rosé<br>Cuvée Roseanne</li>
+              </ul>
+            </div>
+            <div class="vins">
+              <h3>Bières</h3>
+              <ul>
+                <li>La Machotte<br>Blonde</li>
+                <li>La Machotte<br>Blanche</li>
+                <li>La Machotte<br>Ambrée</li>
+              </ul>
+            </div>
             <div class="text">Carte des vins et bières</div>
           </div>
-
           <div class="mySlides2 fade">
             <div class="numbertext">3 / 3</div>
-            <img src="" alt="Plat du jour">
+            <img src="images/fleur_the.png" alt="Illustration fleur de thé">
+            <div class="plat">
+              <h3>Plat du jour</h3>
+              <p>
+                Venait dévouvrir notre plat du jour, confectionné avec amour au petit matin.<br>
+                Vous pouvez aussi venir déguster nos desserts et nos gâteaux fait maisons.
+              </p>
+            </div>
             <div class="text">Carte du plat du jour</div>
           </div>
 
-          <!-- Next and previous buttons -->
-          <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
-        </div>
-        <br>
-
-        <!-- The dots/circles -->
-        <!--
-        <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
-        </div>
-        -->
       </div>
     </section>
+    -->
 
     <!-- contact -->
     <section id="contact">
