--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <div class="pres_texte">
         <p>Bienvenue chez</p>
         <h1>Arteastic</h1>
+        <h2>Bonjour ceci est un test git</h2>
         <p>
           <strong>Concept store</strong><br>
           Salon de thé / Petite restauration / Galerie d'arts<br>
